welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:8: error: not found: value y
	do{setPos(i,j);j = j + 1;ecritMessage(y);n = n + 1;}while(i == 0 | i == 2 | i == 4 | i==6)
                                              ^ZigZag:9: error: not found: value y
	do{j = 6 - j ;setPos(i,j);ecritMessage(y);n = n + 1;}while(i == 1 | i == 3 | i == 5 | i==7)
                                               ^